# potcast

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  SPEC.md  compose.nas.yaml  compose.yaml  pyproject.toml
.github/workflows/: docker-publish.yml
deploy/systemd/: potcast.service
docs/: architecture.md  configuration.md  deployment.md
examples/: potcast.yaml
extras/rpitx-icecast-fm/: README.md  install-rpitx-icecast-fm.sh
potcast/: __init__.py  app.py  cli.py  config.py  downloader.py  errors.py  feed_refresh.py  feeds.py  models.py  runtime.py  scheduler.py  service.py  state.py  station.py
potcast/outputs/: __init__.py  base.py  icecast.py  local_audio.py
tests/unit/: test_app.py  test_config.py  test_downloader.py  test_feed_refresh.py  test_feeds.py  test_outputs.py  test_runtime.py  test_scheduler.py  test_service.py  test_state.py  test_station.py
